--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
         "prepublishOnly": "npm run build"
     },
     "devDependencies": {
+        "@types/cors": "^2.8.19",
+        "@types/express": "^5.0.3",
         "@types/node": "^24.0.13",
         "tsx": "^4.20.3",
         "typescript": "^5.8.3"
@@ -44,6 +46,8 @@
         "@modelcontextprotocol/sdk": "^1.15.1",
         "axios": "^1.10.0",
         "cheerio": "^1.1.0",
+        "cors": "^2.8.5",
+        "express": "^5.1.0",
         "tiktoken": "^1.0.21",
         "vitest": "^3.2.4",
         "zod": "^3.25.76"
