--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,9 @@
       "outDir": "./dist",
       "rootDir": "./src",
       "strict": true,
-      "skipLibCheck": true
+      "skipLibCheck": true,
+      "noImplicitAny": false,
+      "strictFunctionTypes": false
     },
     "include": ["src/**/*"],
     "exclude": ["node_modules", "dist"]
