--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "japan-transfer-mcp",
-    "version": "0.0.2",
+    "version": "0.0.4",
     "description": "Model Context Protocol (MCP) server for J-Route Planner",
     "keywords": [
         "mcp",
@@ -38,14 +38,14 @@
     "devDependencies": {
         "@types/node": "^24.0.13",
         "tsx": "^4.20.3",
-        "typescript": "^5.8.3"
+        "typescript": "^5.8.3",
+        "vitest": "^3.2.4"
     },
     "dependencies": {
         "@modelcontextprotocol/sdk": "^1.15.1",
         "axios": "^1.10.0",
         "cheerio": "^1.1.0",
-        "tiktoken": "^1.0.21",
-        "vitest": "^3.2.4",
+        "gpt-tokenizer": "^3.0.1",
         "zod": "^3.25.76"
     }
 }
