--- a/package.json
+++ b/package.json
@@ -44,8 +44,10 @@
     "dependencies": {
         "@modelcontextprotocol/sdk": "^1.15.1",
         "axios": "^1.10.0",
+        "axios-cookiejar-support": "^6.0.4",
         "cheerio": "^1.1.0",
         "gpt-tokenizer": "^3.0.1",
+        "tough-cookie": "^5.1.2",
         "zod": "^3.25.76"
     }
 }
